fix: Alignements in L2container

--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-1280.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-1280.scss
@@ -29,10 +29,12 @@
         }
 
         .content {
-            margin: 60px 0 60px 30px;
+            margin: 60px 0 60px 0;
             text-align: center;
             display: flex;
+            column-gap: 60px;
             &__service {
+                max-width: 580px; 
                 flex-direction: column;
                 align-items: center;
                 display: flex;
@@ -52,6 +54,7 @@
                     line-height: 2.68;
                     text-align: center;
                     color: #1c1c1c;
+                    align-items: center;
                     
                     &__op {
                         font-size: 22px;
@@ -71,13 +74,12 @@
                 }
 
                 .description {
-                    // max-width: 590px;
                     height: 94px;
                     font-size: 16px;
                     line-height: 1.5;
                     text-align: left;
                     color: #1c1c1c;
-                    margin: 20px 15px 30px;
+                    margin: 0 0 30px 30px;
                 }
                 .info {
                     width: 180px;
