--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-tablet.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-tablet.scss
@@ -33,9 +33,10 @@
   
       .content {
         display: flex;
-        margin: 60px 30px 60px 30px;
+        margin: 60px 0 60px 0;
         text-align: center;
         justify-content: center;
+        column-gap: 60px;
   
         &__service {
           flex-direction: column;
@@ -76,16 +77,12 @@
           }
   
           .description {
-            height: 80px;
+            margin: 0px 20px 30px 20px;
             font-size: 14px;
             line-height: 1.43;
             text-align: left;
             color: #4c4c4c;
-            margin-bottom: 30px;
-            padding-right: 30px;
-            margin-right:30px;
             justify-content: center;
-            letter-spacing: -0.35px;
             font-family: "Open Sans", sans-serif !important;
           }
   
