--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer.scss
@@ -24,7 +24,6 @@
                 line-height: 1.5;
                 color: #808992;
                 margin: 15px 128px 0px 128px;
-
             }
         }
 
@@ -33,7 +32,9 @@
             text-align: center;
             display: flex;
             justify-content: center;
+            column-gap: 174px;
             &__service {
+                max-width: 700px; 
                 flex-direction: column;
                 align-items: center;
                 display: flex;
@@ -48,7 +49,7 @@
                     margin-bottom: -10px;
                     display: flex;
                     flex-direction: row;
-                    align-items: flex-end;
+                    align-items: center;
                     font-size: 40px;
                     font-weight: 600;
                     line-height: 2.68;
@@ -73,17 +74,14 @@
                 }
 
                 .description {
-                    // height: 70px;
-                    margin: 0 87px 30px 0;
+                    width: 100%;
+                    margin: 0 0 30px 30px;
                     font-size: 16px;
                     font-style: normal;
                     line-height: 1.5;
                     text-align: left;
                     color: #1c1c1c;
 
-                    :first-child {
-                        padding-right: 80px;
-                    }
                 }
                 .info {
                     width: 180px;
